--- a/pinecone.ipynb
+++ b/pinecone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,20 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings = pc.inference.embed(\n",
-    "model=\"multilingual-e5-large\",\n",
-    "inputs=arr[:96],\n",
-    "parameters={\"input_type\": \"passage\", \"truncate\": \"END\"}\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,161 +109,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "idx[:5]"
+    "all_embeddings = []\n",
+    "for i in range(0, 1496+1, 96):\n",
+    "    embeddings = pc.inference.embed(\n",
+    "    model=\"multilingual-e5-large\",\n",
+    "    inputs=arr[i:i+96],\n",
+    "    parameters={\"input_type\": \"passage\", \"truncate\": \"END\"}\n",
+    "    )\n",
+    "    all_embeddings.append(embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['index'].loc[2].tolist()"
+    "# for i in range(0, 1496+1, 96):\n",
+    "#     print(i, i+96)\n",
+    "#     for j in range(i, i+96+1):\n",
+    "#         print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"So you've come to the master for guidance? Is this what you're saying, grasshopper?\""
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['text'].loc[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "96"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'values': [0.029327392578125, -0.022308349609375, ..., -0.0242156982421875, -0.000347137451171875]}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "embeddings[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "upserted_count: 5"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Target the index where you'll store the vector embeddings\n",
-    "index = pc.Index(\"the-office\")\n",
     "\n",
     "# Prepare the records for upsert\n",
     "# Each contains an 'id', the embedding 'values', and the original text as 'metadata'\n",
+    "\n",
     "records = []\n",
-    "for i in range(len(embeddings[:5])):\n",
-    "    records.append({\n",
-    "        \"id\": str(df['index'].loc[i].tolist()),\n",
-    "        \"values\": embeddings[i]['values'],\n",
-    "        \"metadata\": {'text': df['text'].loc[2]}\n",
-    "    })\n",
-    "\n",
-    "\n",
-    "# Upsert the records into the index\n",
-    "index.upsert(\n",
-    "    vectors=records,\n",
-    "    namespace=\"example-namespace\"\n",
-    ")\n"
+    "w = 0\n",
+    "for i in range(0, 1496+1, 96):\n",
+    "    k = 0\n",
+    "    for j in range(i, i+96):\n",
+    "        records.append({\n",
+    "            \"id\": str(df['index'].loc[j].tolist()),\n",
+    "            \"values\": all_embeddings[0][k]['values'],\n",
+    "            \"metadata\": {'text': df['text'].loc[j]}\n",
+    "        })\n",
+    "        k += 1\n",
+    "    w += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "(16, 96, 96)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "records[0]['id']"
+    "len(all_embeddings), len(all_embeddings[0]), len(all_embeddings[-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1536"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = pc.Index(\"the-office\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, 1496+1, 96):\n",
+    "    # Upsert the records into the index\n",
+    "    index.upsert(\n",
+    "        vectors=records[i:i+96],\n",
+    "        namespace=\"example-namespace\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'matches': [{'id': '429',\n",
+      "              'metadata': {'text': 'We can go.'},\n",
+      "              'score': 0.81124663,\n",
+      "              'sparse_values': {'indices': [], 'values': []},\n",
+      "              'values': []},\n",
+      "             {'id': '813',\n",
+      "              'metadata': {'text': \"I'm a deer hunter. I go all the time with \"\n",
+      "                                   'my dad. One thing about deer, they have '\n",
+      "                                   'very good vision. One thing about me, I am '\n",
+      "                                   'better at hiding than they are... at '\n",
+      "                                   'vision.'},\n",
+      "              'score': 0.81124663,\n",
+      "              'sparse_values': {'indices': [], 'values': []},\n",
+      "              'values': []},\n",
+      "             {'id': '909',\n",
+      "              'metadata': {'text': 'Hey, Hey!'},\n",
+      "              'score': 0.81124663,\n",
+      "              'sparse_values': {'indices': [], 'values': []},\n",
+      "              'values': []}],\n",
+      " 'namespace': 'example-namespace',\n",
+      " 'usage': {'read_units': 6}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define your query\n",
+    "query = \"green\"\n",
+    "\n",
+    "# Convert the query into a numerical vector that Pinecone can search with\n",
+    "query_embedding = pc.inference.embed(\n",
+    "    model=\"multilingual-e5-large\",\n",
+    "    inputs=[query],\n",
+    "    parameters={\n",
+    "        \"input_type\": \"query\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Search the index for the three most similar vectors\n",
+    "results = index.query(\n",
+    "    namespace=\"example-namespace\",\n",
+    "    vector=query_embedding[0].values,\n",
+    "    top_k=3,\n",
+    "    include_values=False,\n",
+    "    include_metadata=True\n",
+    ")\n",
+    "\n",
+    "print(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '429',\n",
+       " 'metadata': {'text': 'We can go.'},\n",
+       " 'score': 0.81124663,\n",
+       " 'sparse_values': {'indices': [], 'values': []},\n",
+       " 'values': []}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['matches'][0]['id'],"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "429"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(results['matches'][0]['id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[428, 812, 908]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
