--- a/pinecone.ipynb
+++ b/pinecone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,10 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "index = pc.Index(\"the-office\")\n"
    ]
   },
@@ -225,30 +226,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'matches': [{'id': '429',\n",
-      "              'metadata': {'text': 'We can go.'},\n",
-      "              'score': 0.81124663,\n",
+      "{'matches': [{'id': '141',\n",
+      "              'metadata': {'text': 'Introduce yourself. Be polite.'},\n",
+      "              'score': 0.7969082,\n",
       "              'sparse_values': {'indices': [], 'values': []},\n",
       "              'values': []},\n",
-      "             {'id': '813',\n",
-      "              'metadata': {'text': \"I'm a deer hunter. I go all the time with \"\n",
-      "                                   'my dad. One thing about deer, they have '\n",
-      "                                   'very good vision. One thing about me, I am '\n",
-      "                                   'better at hiding than they are... at '\n",
-      "                                   'vision.'},\n",
-      "              'score': 0.81124663,\n",
+      "             {'id': '237',\n",
+      "              'metadata': {'text': \"Mr. Decker, I'm sorry about that. What \"\n",
+      "                                   'were you... Can you hold on one second? '\n",
+      "                                   'Yeah, just one second. Thanks. Hello? '\n",
+      "                                   \"That's it. Perfect. So what I was \"\n",
+      "                                   'saying... Hello? Thanks, Dwight.'},\n",
+      "              'score': 0.7969082,\n",
       "              'sparse_values': {'indices': [], 'values': []},\n",
       "              'values': []},\n",
-      "             {'id': '909',\n",
-      "              'metadata': {'text': 'Hey, Hey!'},\n",
-      "              'score': 0.81124663,\n",
+      "             {'id': '45',\n",
+      "              'metadata': {'text': 'OK...'},\n",
+      "              'score': 0.7969082,\n",
       "              'sparse_values': {'indices': [], 'values': []},\n",
       "              'values': []}],\n",
       " 'namespace': 'example-namespace',\n",
@@ -258,7 +259,7 @@
    ],
    "source": [
     "# Define your query\n",
-    "query = \"green\"\n",
+    "query = \" I might just be a basketball machine.\"\n",
     "\n",
     "# Convert the query into a numerical vector that Pinecone can search with\n",
     "query_embedding = pc.inference.embed(\n",
